<resources>
    <string name="app_name">Loud9ja</string>
    <string name="preview_fragment">Preview Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="meeting_fragment">Meeting Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="participants_fragment">Participants Fragment</string>
    <string name="environment">Environment</string>
    <string name="room_id">Room Id</string>
    <string name="room_name">Room Name</string>
    <string name="username">Username</string>
    <string name="start">Start</string>
    <string name="join_now">Join Now</string>
    <string name="create_room">Create Room</string>
    <string name="end_call">End Call</string>
    <string name="toggle_video">Toggle Video</string>
    <string name="toggle_audio">Toggle Audio</string>
    <string name="flip_camera">Flip Camera</string>
    <string name="android_test_user">android-test-user</string>
    <string name="john_doe">John Doe</string>
    <string name="speaker_john_doe">Speaker - John Doe</string>
    <string name="no_one_speaking">No one is speaking</string>
    <string name="john_doe_initials">JD</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="_8_00">8:00</string>
    <string name="send_message">Send Message</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <string name="chat">Chat</string>
    <string name="server_message_log">Server Message Log</string>
    <string name="pin_video">Pin Video</string>
    <string name="unpin_video">Unpin Video</string>
    <string name="_100ms_logo">100ms Logo</string>
    <string name="share_link">Share Link</string>
    <string name="more_options">More Options</string>
    <string name="meeting_options">Meeting Options</string>
    <string name="meeting">Meeting</string>
    <string name="open_chat">Open Chat</string>
    <string name="share_screen">Share Screen</string>
    <string name="stop_share_screen">Stop Share Screen</string>
    <string name="record_meeting">Record Meeting</string>
    <string name="show_participants">Show Participants</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="default_name">Default Name</string>
    <string name="default_video_source">Default Video Source</string>
    <string name="default_microphone_source">Default Microphone Source</string>
    <string name="publish_video_while_joining">Publish video while joining</string>
    <string name="show_video_preview_before_joining">Show video preview before joining</string>
    <string name="mirror_my_video">Mirror my video</string>
    <string name="publish_audio_while_joining">Publish audio while joining</string>
    <string name="maximum_rows">Maximum Rows</string>
    <string name="maximum_columns">Maximum Columns</string>
    <string name="audio_poll_interval">Audio Poll Interval</string>
    <string name="silence_audio_level_threshold">Silence Audio Level Threshold</string>
    <string name="show_dominant_speaker">Show Dominant Speaker</string>
    <string name="video_resolution">Video Resolution</string>
    <string name="video_codec">Video Codec</string>
    <string name="log_level_100ms_sdk">Log Level 100ms Sdk</string>
    <string name="log_level_webrtc">Log Level WebRTC</string>
    <string name="search_participants">Search Participants</string>
    <string name="video_bitrate">Video Bitrate</string>
    <string name="role">Role</string>
    <string name="change_role_request">Change Role Request</string>
    <string name="track_change_request">Request</string>
    <string name="non_fatal_error_dialog_title">Error</string>
    <string name="video_framerate">Video Framerate</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="permission_fragment">Permission Fragment</string>
    <string name="permission_artwork">Permission Artwork</string>
    <string name="permission_heading">Grant permission to use camera and microphone</string>
    <string name="permission_description">Access to camera and microphone is needed to make sure other participants can see and hear you during a call</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="do_it_later">Do it later</string>
    <string name="join_a_meeting">Join a meeting</string>
    <string name="start_a_meeting">Start a meeting</string>
    <string name="get_started">Get Started</string>
    <string name="meeting_url_hint">Enter meeting url or code</string>
    <string name="enter_name">Enter Name</string>
    <string name="use_as_default">Use as default</string>
    <string name="progress_bar_heading">Progress Bar Heading</string>
    <string name="progress_bar_description">Progress Bar Description</string>
    <string name="close_chat">Close Chat</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="oops_you_are_disconnected">Oops! You are disconnected</string>
    <string name="reconnect">Reconnect</string>
    <string name="reason">Reason</string>
    <string name="toggle_volume">Toggle Volume</string>
    <string name="pref_speakerphone_key">speakerphone_preference</string>
    <string name="pref_speakerphone_title">Speakerphone.</string>
    <string name="pref_speakerphone_dlg">Speakerphone.</string>
    <string name="pref_speakerphone_default">auto</string>
    <string name="bug_report">Bug Report</string>
    <string name="ok">OK</string>
    <string name="leak_canary">Leak Canary</string>
    <string name="retry">Retry</string>
    <string name="leave">Leave</string>
    <string name="error">Error</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="turn_on">Turn On</string>
    <string name="video_resolution_height">Video Resolution (Height)</string>
    <string name="video_resolution_width">Video Resolution (Width)</string>
    <string name="hero_view">Hero View</string>
    <string name="grid_view">Grid View</string>
    <string name="active_speaker_view">Active Speaker View</string>
    <string name="screen_share">Screen Share</string>
    <string name="audio_status">Audio Status</string>
    <string name="video_status">Video Status</string>
    <string name="audio_level">Audio Level</string>
    <string name="meeting_name">Meeting Name</string>
    <string name="more">More</string>
    <string name="type_a_message">Type a message</string>
    <string name="_8">8</string>
    <string name="_hyphen">-</string>
    <string name="time_12_45">12:45</string>
    <string name="show_network_info">Show Network Info</string>
    <string name="speakers">Speakers</string>
    <string name="toggle_visibility">Toggle Visibility</string>
    <string name="audio_only_view">Audio Only View</string>
    <string name="hls_view">HLS View</string>
    <string name="meeting_mode">Meeting Mode</string>
    <string name="show_retry_progress_bars">Show Retry Progress Bars</string>
    <string name="participant_mute_unmute">Mute/Unmute</string>
    <string name="participant_kick">Kick</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="role_change">Role Change</string>
    <string name="switch_enable_subscribe_degradation">Enable subscribe degradation</string>
    <string name="end_room">End room</string>
    <string name="end_and_lock_room">Lock and end room</string>
    <string name="remote_mute_all_desc">Remote Mute All</string>
    <string name="remote_mute_role_desc">Remote Mute Role</string>
    <string name="record">Record</string>
    <string name="stop_recording_stream">Stop Recording/Stream</string>
    <string name="add_new_rtmp_streaming_url">Add new RTMP streaming url</string>
    <string name="rtmp_settings">RTMP Settings</string>
    <string name="use_hardware_AEC">Use Harware AEC</string>
    <string name="enable_background">Enable Background</string>
    <string name="disable_background">Disable Background</string>
    <string name="show_stats">Show stats</string>
    <string name="raise_hand">✋ Raise Hand</string>
    <string name="lower_hand">Lower Hand</string>
    <string name="name_change_dialog">Type in the new name</string>
    <string name="submit">Submit</string>
    <string name="hls_start">HLS Start</string>
    <string name="hls_stop">HLS Stop</string>
    <string name="recording_start_stop">Recording Started: %d, Stopped: %d</string>
    <string name="rtmp_start_stop">RTMP Started: %d, Stopped: %d</string>
    <string name="sfu_start">SFU started at:%d</string>
    <string name="or">OR</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_sos">SOS</string>
    <string name="action_groups">Groups</string>
    <string name="action_report">Report</string>
    <string name="action_discussion">Discussion</string>
    <string name="welcome_back">Welcome back!\nPlease login here</string>
    <string name="email_address_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="choose_where_to_start">Choose where to start</string>
    <string name="continue_with_your_email">Continue with your email</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="placeholder">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros lorem.</string>
    <string name="login_here">Login here</string>
    <string name="no_long_process_it_will_only_take_a_minute">No long process, it will only take a minute</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="choose_password">Choose password</string>
    <string name="verify_password">Verify password</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="new_report">NEW REPORT</string>
    <string name="recent_reports">Recent Reports</string>
    <string name="go_live_now">Go live now?</string>
    <string name="add_title">Add title</string>
    <string name="let_people_know_what_your_video_will_be_about">Let people know what your video will be about</string>
    <string name="continuee">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="discussions">Discussions</string>
    <string name="reports">Reports</string>
    <string name="groups">Groups</string>
    <string name="go_live">Go Live</string>
    <string name="sos">SOS</string>
    <string name="polls">Polls</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="about_us">About Us</string>
</resources>