<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_discussions"
            android:title="@string/discussions" />
        <item
            android:id="@+id/nav_reports"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_groups"
            android:title="@string/groups" />
        <item
            android:id="@+id/nav_go_live"
            android:title="@string/go_live" />
        <item
            android:id="@+id/nav_sos"
            android:title="@string/sos" />
        <item
            android:id="@+id/nav_polls"
            android:title="@string/polls" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>
</menu>